# LivingPaintings

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
LivingPaintings/: CMakeLists.txt
LivingPaintings/resources/shaders/: computeHeight.comp  computeHeight.comp.spv  painting.frag  painting.geom  painting.geom.spv  painting.vert  painting.vert.spv  paintingLightning.frag  paintingLightning.frag.spv  triangle.frag  triangle.frag.spv  triangle.vert
LivingPaintings/src/: LivingPaintings.cpp  LivingPaintings.h  config.hpp  config.hpp.in
LivingPaintings/src/include/sam/: sam.h
LivingPaintings/src/segmentation/: segmentation_system.cpp  segmentation_system.h
LivingPaintings/src/utils/: alloc.h  frame_exporter.cpp  frame_exporter.h  path_params.hpp  win_utils.cpp
LivingPaintings/src/vulkan/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  consts.h  controls.cpp  controls.h  debug.cpp  debug.h  descriptor.cpp  descriptor.h  device.cpp  device.h  engine.cpp  engine.h  fence.cpp  fence.h  forward_rendering_action.cpp  forward_rendering_action.h  framebuffer.cpp  framebuffer.h  graphics_pipeline.cpp  graphics_pipeline.h  gui.cpp  gui.h  gui_params.h  image.cpp  image.h  instance.cpp  instance.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  queue.cpp  queue.h  queue_family.cpp  queue_family.h  (+16 more)
include/inpaint/Debug/: inpaint.lib
include/inpaint/Release/: inpaint.lib
include/sam/Debug/: sam_cpp_lib.exp
include/sam/Release/: sam_cpp_lib.exp  sam_cpp_lib.lib
